k8s/manifests/ingress/retail-store-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 8082
          - path: /catalog
            pathType: Prefix
            backend:
              service:
                name: catalog
                port:
                  number: 8080
          - path: /carts
            pathType: Prefix
            backend:
              service:
                name: carts
                port:
                  number: 8083
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 8080
